--- a/trunk/src/app/layouts/scripts/site.phtml
+++ b/trunk/src/app/layouts/scripts/site.phtml
@@ -19,7 +19,14 @@
    <link rel="Bookmark" href="<?= $this->linkTo('favicon.ico') ?>"/>
    <link rel="SHORTCUT ICON" href="<?= $this->linkTo('favicon.ico') ?>" />
    <link rel="unapi-server" type="application/xml" title="unAPI" href="<?= $this->absoluteUrl(array('controller' => 'unapi'), '', true) ?>"/>
-   
+
+    <? /* include javascript for set-role form in any non-production version of the site */ ?>
+    <? /* NOTE: include *before* extra scripts to avoid conflict/reload issues */ ?>
+    <? if ($this->env != "production"): ?> 
+      <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+      <?= $this->javascript("dev.js"); ?> 
+   <? endif ?>
+
    <? if ($this->extra_scripts): ?>
      <? foreach ($this->extra_scripts as $js): ?>
      <script src="<?= $js ?>"></script>
@@ -32,12 +39,6 @@
    <? endif ?>
 
     <?= $this->javascript("projax/js/prototype.js"); ?>
-
-    <? /* include javascript for set-role form in any non-production version of the site */ ?>
-    <? if ($this->env != "production"): ?> 
-      <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
-      <?= $this->javascript("dev.js"); ?> 
-   <? endif ?>
 </head>
 <body>
 <? if ($this->env == "staging"): ?>   
