--- a/src/app/views/scripts/edit/school.phtml
+++ b/src/app/views/scripts/edit/school.phtml
@@ -6,8 +6,4 @@
 <p>Select the school to which the ETD should be moved</p>
 <p>NOTE: The program field will have to be assigned after changing schools</p>
 
-<form action="<?= $this->url(array("action" => "save-school")) ?>" method="post" onsubmit="disableButton('save')">
-<?= $this->formSelect("schoolId", $this->schoolId, null, $this->options); ?>
-<?= $this->formHidden("schoolIdOld", $this->schoolId); ?>
-<p><?= $this->formSubmit("save", "save", array("class" => "button")); ?></p>
-</form>
+<?=  $this->render('edit/_school_form.phtml'); ?>
