--- a/trunk/src/app/views/scripts/view/fullrecord.phtml
+++ b/trunk/src/app/views/scripts/view/fullrecord.phtml
@@ -24,7 +24,7 @@
   <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "faculty")) ?>">edit committee/adviser</a>
   <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "rights")) ?>">edit rights/restrictions</a>
   <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "researchfield")) ?>">edit research fields</a>
-  <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "program")) ?>">edit program</a>
+  <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "program")) ?>">edit school/program</a>
   <? if ($this->etd->schoolId() == "rollins"): ?>
     <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "partneringagency")) ?>">edit partnering agency</a>   
   <? endif ?> 
