update add file view/form to allow preselecting a file type to add; list pdf first [#32456981]

--- a/branches/submit-without-initial-pdf/src/app/views/scripts/file/add.phtml
+++ b/branches/submit-without-initial-pdf/src/app/views/scripts/file/add.phtml
@@ -24,9 +24,9 @@ to your document.</p>
     action="<?= $this->url(array("action" => "new", "etd" => $this->pid))?>">
 
    <p><b>Type of file to add:</b></p>
-  <p><?= $this->formSelect("filetype", "", null,
-			   array("original" => "Thesis/Dissertation in original format ",
-				 "pdf" => "Thesis/Dissertation in PDF format",	
+  <p><?= $this->formSelect("filetype", $this->default_filetype, null,
+			   array("pdf" => "Thesis/Dissertation in PDF format",	
+				 "original" => "Thesis/Dissertation in original format ",
 				 "supplement" => "Supplemental file")); ?> </p>
    
   <p><?= $this->formFile("file"); ?></p>
