--- a/trunk/src/app/views/scripts/email/index.phtml
+++ b/trunk/src/app/views/scripts/email/index.phtml
@@ -7,4 +7,5 @@
  <li><a href="<?= $this->url(array('action' => 'view', 'template' => 'publication')) ?>">publication</a></li>
  <li><a href="<?= $this->url(array('action' => 'view', 'template' => 'embargo_expiration')) ?>">embargo warning</a></li>
  <li><a href="<?= $this->url(array('action' => 'view', 'template' => 'embargo_end')) ?>">embargo end</a></li>
+ <li><a href="<?= $this->url(array('action' => 'view', 'template' => 'revert_to_draft')) ?>">revert to draft</a></li>
 </ul>
