--- a/branches/submit-without-initial-pdf/src/public/css/etd.css
+++ b/branches/submit-without-initial-pdf/src/public/css/etd.css
@@ -847,6 +847,11 @@ div.indent { margin-left:25px; }
   color:#881725; 
 }
 
+.button:disabled {
+  color: gray;
+  border:1px solid gray;
+}
+
 div.facets { 
  position:absolute;
  right:5px;
@@ -1136,7 +1141,7 @@ form#submission label.etd_title {
   display: block;
   font-weight: bold;
 }
-form#submission input#etd_title {
+form#submission textarea#etd_title {
   width: 90%;
   margin-bottom: 10px;
 }
@@ -1146,4 +1151,5 @@ form#submission label.error  {
     font-size: 90%;
     padding-left: 5px;
 }
+
 
