--- a/branches/submit-without-initial-pdf/src/app/views/scripts/submission/start.phtml
+++ b/branches/submit-without-initial-pdf/src/app/views/scripts/submission/start.phtml
@@ -79,9 +79,7 @@
   <?= $this->formTextarea("etd_title", $this->answers['title'], array("class" => "required-field")); ?> 
 </div>
 
-
   <?= $this->formSubmit("Begin", "Begin >", array("class" => "button", "style" => "margin-left:10px")); ?>
-						<? /* "onClick" => "Element.show('processing')")); */ ?>
   <span id="processing" style="display:none">Processing ... <span class="note">(this may take a moment)</span></span>
 </form>
 
@@ -132,6 +130,13 @@ $j(document).ready(function() {
         "embargo_abs_toc" : {
           required: "#embargo-yes:checked"
         }
+      },
+      errorPlacement: function(error, element) {
+        // custom error placement for yes/no radio inputs
+        // zend framework view helper outputs input inside a label;
+        // if there is a label following, put the error after it; otherwise, after element.
+        var after = element.parent().nextAll('label');
+        error.insertAfter(after.length > 0 ? after : element);
       },
       submitHandler: function(form) {
         // on valid submit, disable submit button (prevent double/multi-click creating multiple records)
