--- a/trunk/src/app/views/scripts/edit/school.phtml
+++ b/trunk/src/app/views/scripts/edit/school.phtml
@@ -6,4 +6,7 @@
 <p>Select the school to which the ETD should be moved</p>
 <p>NOTE: The program field will have to be assigned after changing schools</p>
 
-<?=  $this->render('edit/_school_form.phtml'); ?>
+<form action="<?= $this->url(array("action" => "save-school")) ?>" method="post" onsubmit="disableButton('save')">
+<?=  $this->render('edit/_school_elements.phtml'); ?>
+<p><?= $this->formSubmit("save", "save", array("class" => "button")); ?></p>
+</form>
