--- a/src/app/layouts/scripts/test_warning.phtml
+++ b/src/app/layouts/scripts/test_warning.phtml
@@ -15,7 +15,8 @@
     font-size: 16px;
   }
 </style>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
+<? /* NOTE: assuming test warning will ONLY be enabled in non-production environments;
+   jquery should always be already loaded for set-role functionality. */ ?>
 <script type="text/javascript">
   var $j = jQuery.noConflict();  
   $j(document).ready(function() {
